# ArduinoCore-k210

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  boards.txt  micropython.cmake  platform.txt  programmers.txt  project.cmake
cores/k210/: Arduino.h  CMakeLists.txt  Common.cpp  Common.h  HardwareSerial.cpp  HardwareSerial.h  Interrupts.h  WInterrupts.c  WInterrupts.h  main.cpp  wiring.c  wiring_analog.c  wiring_digital.c  wiring_private.h  wiring_pulse.c  wiring_pulse.cpp  wiring_shift.c
libraries/SPI/: SPI.cpp  SPI.h  SPIClass.cpp  SPIClass.h  library.properties
libraries/SPI/examples/BarometricPressureSensor/: BarometricPressureSensor.ino
libraries/SPI/examples/DigitalPotControl/: DigitalPotControl.ino
libraries/Ticker/: library.properties
libraries/Ticker/examples/Blinker/: Blinker.ino
libraries/Wire/: Wire.cpp  Wire.h  keywords.txt  library.properties
libraries/built-in/01.Basics/Blink/: Blink.ino
libraries/micropython/: mpconfigport.h
libraries/wraper/: arduino_wraper.cpp  arduino_wraper.h
tools/: linux_kflash_v1.0.0.tar.bz2  linux_kflash_v1.1.0.tar.bz2  linux_kflash_v1.3.0.tar.bz2
tools/scripts/: kendryte_openocd.cfg
variants/k210/: pins_arduino.c  pins_arduino.h
variants/maix_bit/: pins_arduino.h
variants/seeed_k210_pi/: pins_arduino.h
variants/widora_AIRV/: pins_arduino.h
